Bug 154421 - Modern IDB: Fix IDBGetResult encoder/decoder
Summary: Modern IDB: Fix IDBGetResult encoder/decoder
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: Safari 9
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Brady Eidson
URL:
Keywords:
Depends on:
Blocks: 149117 153808
  Show dependency treegraph
 
Reported: 2016-02-18 15:32 PST by Brady Eidson
Modified: 2016-02-18 16:42 PST (History)
4 users (show)

See Also:


Attachments
Patch v1 (6.14 KB, patch)
2016-02-18 15:34 PST, Brady Eidson
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Brady Eidson 2016-02-18 15:32:40 PST
Modern IDB: Fix IDBGetResult encoder/decoder

It was implemented in WK2 and therefore missing an internal flag.
Comment 1 Brady Eidson 2016-02-18 15:34:37 PST
Created attachment 271703 [details]
Patch v1
Comment 2 WebKit Commit Bot 2016-02-18 16:41:59 PST
Comment on attachment 271703 [details]
Patch v1

Clearing flags on attachment: 271703

Committed r196786: <http://trac.webkit.org/changeset/196786>
Comment 3 WebKit Commit Bot 2016-02-18 16:42:03 PST
All reviewed patches have been landed.  Closing bug.